--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,12 +1,12 @@
 services:
   - type: web
     name: road-damage-api
-    runtime: python3
-    buildCommand: pip install -r requirements.txt
+    runtime: python
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.9
+        value: 3.9.18
       - key: SUPABASE_URL
         sync: false
       - key: SUPABASE_KEY
